--- a/lib/test-data/test-page.html
+++ b/lib/test-data/test-page.html
@@ -53,11 +53,11 @@
             <tbody>
                 <tr>
                     <td><label for="Person_SwisID">SWIS ID</label></td>
-                    <td>23616</td>
+                    <td>12345</td>
                 </tr>
                 <tr>
                     <td><label for="Person_FullName">Name</label></td>
-                    <td>Abraham, Dwayne Edward</td>
+                    <td>Doe, John</td>
                 </tr>
                 <tr>
                     <td><label for="Person_Age">Age</label></td>
