--- a/public/data.html
+++ b/public/data.html
@@ -10,6 +10,6 @@
     <title>MCDC Data</title>
 </head>
 <body>
-    <script type="module" src="./home/index.js"></script>
+    <script type="module" src="./data/index.js"></script>
 </body>
 </html>
