--- a/chartSandbox/chart.html
+++ b/chartSandbox/chart.html
@@ -8,7 +8,7 @@
   <title>Test Chart</title>
 </head>
 <body>
-  <h1>Felony Arrests per 100,000 Population</h1>
+  <h1>Detentions by Race in Multnomah County</h1>
   <style>
     div {
   height: 600px;
