--- a/chartSandbox/chart.html
+++ b/chartSandbox/chart.html
@@ -8,16 +8,20 @@
   <title>Test Chart</title>
 </head>
 <body>
-  <h1>Detentions by Race in Multnomah County</h1>
   <style>
     div {
-  height: 600px;
+  height: 400px;
   width: 600px;
 }
   </style>
+  <h1>Detentions by Race in Multnomah County</h1>
   <div id="container">
 
   </div>
+  <h1>Detentions by Time in Multnomah County</h1>
+  <div id="timecontainer">
+ </div>
+
   <script type="module" src="./graph.js"></script>
 </body>
 </html>
