--- a/chartSandbox/chart.html
+++ b/chartSandbox/chart.html
@@ -8,15 +8,9 @@
   <title>Test Chart</title>
 </head>
 <body>
+  <div>
   <h1>Detentions by Race in Multnomah County</h1>
-  <style>
-    div {
-  height: 600px;
-  width: 600px;
-}
-  </style>
-  <div id="container">
-
+    <div id="container"></div>
   </div>
   <script type="module" src="./graph.js"></script>
 </body>
