--- a/public/data.html
+++ b/public/data.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./common/reset.css">
     <link rel="stylesheet" href="./common/main.css">
     <link rel="stylesheet" href="./common/Header.css">
+    <script src="https://cdn.anychart.com/releases/8.7.0/js/anychart-base.min.js" type="text/javascript"></script>
     <title>MCDC Data</title>
 </head>
 <body>
+    
     <script type="module" src="./data/index.js"></script>
 </body>
 </html>
